modify service classes